// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`types generation > generates empty type when no icons 1`] = `
"// Generated by vite-plugin-svg-spritemap
export type Prefix = 'sprite-';

export type Icons = never;
export type IconsPrefixed = never;
"
`;

exports[`types generation > generates grouped types from glob-matched folders 1`] = `
"// Generated by vite-plugin-svg-spritemap
export type Prefix = 'sprite-';

export type Icons = 'CH' | 'FR' | 'JP' | 'no_viewbox' | 'no_width_height' | 'spiriit' | 'vite';
export type IconsPrefixed = \`\${Prefix}\${Icons}\`;

export type UiIcons = 'no_viewbox' | 'no_width_height' | 'spiriit' | 'vite';
export type UiIconsPrefixed = \`\${Prefix}\${UiIcons}\`;

export type Flags = 'CH' | 'FR' | 'JP';
export type FlagsPrefixed = \`\${Prefix}\${Flags}\`;
"
`;

exports[`types generation > generates types with .ts extension 1`] = `
"// Generated by vite-plugin-svg-spritemap
export type Prefix = 'sprite-';

export type Icons = 'no_viewbox' | 'no_width_height' | 'spiriit' | 'vite';
export type IconsPrefixed = \`\${Prefix}\${Icons}\`;
"
`;

exports[`types generation > generates types with custom idify 1`] = `
"// Generated by vite-plugin-svg-spritemap
export type Prefix = 'sprite-';

export type Icons = 'custom-no_viewbox' | 'custom-no_width_height' | 'custom-spiriit' | 'custom-vite';
export type IconsPrefixed = \`\${Prefix}\${Icons}\`;
"
`;

exports[`types generation > generates types with different prefix 1`] = `
"// Generated by vite-plugin-svg-spritemap
export type Prefix = 'icon-';

export type Icons = 'no_viewbox' | 'no_width_height' | 'spiriit' | 'vite';
export type IconsPrefixed = \`\${Prefix}\${Icons}\`;
"
`;

exports[`types generation > generates types with no prefix 1`] = `
"// Generated by vite-plugin-svg-spritemap

export type Icons = 'no_viewbox' | 'no_width_height' | 'spiriit' | 'vite';
"
`;

exports[`types generation > generates types with string filename 1`] = `
"// Generated by vite-plugin-svg-spritemap
export type Prefix = 'sprite-';

export type Icons = 'no_viewbox' | 'no_width_height' | 'spiriit' | 'vite';
export type IconsPrefixed = \`\${Prefix}\${Icons}\`;
"
`;

exports[`types generation > resolves a group that matches no icons to never 1`] = `
"// Generated by vite-plugin-svg-spritemap
export type Prefix = 'sprite-';

export type Icons = 'no_viewbox' | 'no_width_height' | 'spiriit' | 'vite';
export type IconsPrefixed = \`\${Prefix}\${Icons}\`;

export type Missing = never;
export type MissingPrefixed = never;
"
`;

exports[`types generation > supports an array of globs for a single group 1`] = `
"// Generated by vite-plugin-svg-spritemap
export type Prefix = 'sprite-';

export type Icons = 'CH' | 'FR' | 'JP' | 'no_viewbox' | 'no_width_height' | 'spiriit' | 'vite';
export type IconsPrefixed = \`\${Prefix}\${Icons}\`;

export type Mixed = 'CH' | 'FR' | 'JP' | 'vite';
export type MixedPrefixed = \`\${Prefix}\${Mixed}\`;
"
`;
